# IntelligentLogistics

./: .gitgnore  .gitignore  Base_Dados_relacional.md  Base_Dados_relcional.md  Ideias.txt  LICENSE  README.md  arquitetura_skecth.drawio  arquitetura_skecth2.drawio  arquitetura_sketch.drawio  arquitetura_v3.drawio  coverage-agentA.xml  coverage-agentB.xml  coverage-agentC.xml  coverage-broker.xml  coverage-decision.xml  coverage-shared.xml  coverage.xml  division.md  env_manager.md  env_manager.sh  fluxo.md  importante.md  linkFigma.txt  link_microsite.txt  perguntas.txt  prguntas.txt  pyproject.toml  readme.md  roles.md  run_tests.sh  sonar-project.properties
.github/workflows/: deploy-agentA.yml  deploy-agentB.yml  deploy-all.yml  deploy-kafka.yml  security.yml  sonarcloud.yml  tests.yml
BD/: Base_Dados_relacional.md  DER-BD-IntelligentLogistics.drawio
YOLO_OCR/: README.md  main.py  requirements.txt  setup.py
YOLO_OCR/shared_utils/: Broker.py  RTSPstream.py
YOLO_OCR/src/: AgentA.py  AgentB.py  Logger.py  RTSPstream.py  YOLO_License_Plate.py  YOLO_Truck.py
broker/: asyncapi.yaml  docker-compose.yml  example.py  example2.py
broker_tests/: example.py  example2.py
code_documentation/: python_template.py  template.md
code_documentation/shared/: base_gateway.md  (+3 more)
deprecated/: deprecated_arch.drawio
docs/: tests.tex
env_manager/: env_manager.sh
fluxos_roles/: fluxo.md
sketch_arquitetura/: arquitetura_intelligent_logistics.md  arquitetura_v3.drawio
src/: .env.example  README.md  docker-compose.agents.yml  docker-compose.core.yml  docker-compose.infra.yml  docker-compose.yml  kafka_antigo.txt  main.py  requirements.txt
vehicle_detection/: README.md  conf.yaml  json_to_yolo.py  test.py  train.py
(+817 files in other folders)
